[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/CharAssets/02_Alien_run.png" type="Texture" id=1]
[ext_resource path="res://src/actors/player/player.gd" type="Script" id=2]
[ext_resource path="res://src/CharAssets/01_Alien_idle.png" type="Texture" id=3]
[ext_resource path="res://src/CharAssets/3_jump.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 20, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 20, 0, 20, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 20, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 20, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 24, 32, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 23, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 23, 0, 23, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 5, 11 )

[node name="player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 180.0, -500.0 ],
"_edit_vertical_guides_": [ 2497.0 ]
}
stomp_impulse = 300.0

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 12 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 13 )

[node name="EnemyDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.388235, 0.411765, 0.780392, 1 )
position = Vector2( 0, -11 )
shape = SubResource( 14 )

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
